"Zoom to mouse position" doesn't work in camera view #44422

Closed
opened 2015-04-17 09:38:24 +02:00 by Igor Donevski · 17 comments

System Information
Win 8.1 64, geforce 970gtx

Blender Version
Broken: 2.74
Worked: (optional)

Short description of error
As the title says, wheel zoom zooms to 3d view center in camera view
Exact steps for others to reproduce the error
Roll the wheel while in camera view and "Zoom to mouse position" preference set

**System Information** Win 8.1 64, geforce 970gtx **Blender Version** Broken: 2.74 Worked: (optional) **Short description of error** As the title says, wheel zoom zooms to 3d view center in camera view **Exact steps for others to reproduce the error** Roll the wheel while in camera view and "Zoom to mouse position" preference set
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @el_diablo

Added subscriber: @el_diablo

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2015-04-17 15:21:26 +02:00

This is expected behavior, otherwise it would mean we’d have to move the camera itself. Thanks for the report anyway.

This is expected behavior, otherwise it would mean we’d have to move the camera itself. Thanks for the report anyway.
Author

I forgot to specify, the report is tied to mode of operation while in not 'Lock camera to view' mode. Its essentially a 2d move and shouldn't move the camera itself. It should operate the same as UV/Image or any of other editors. I agree that 'Lock camera to view' should stay as is, since there its completely logical to zoom to center of view.

I forgot to specify, the report is tied to mode of operation while in not 'Lock camera to view' mode. Its essentially a 2d move and shouldn't move the camera itself. It should operate the same as UV/Image or any of other editors. I agree that 'Lock camera to view' should stay as is, since there its completely logical to zoom to center of view.

This does not make any difference - try to move yourself in Camera View and you’ll see you leave that view immediately. What you are requiring is similar to Shift parameters of the camera, not much sense to add something like that just for 3DView.

This does not make any difference - try to move yourself in Camera View and you’ll see you leave that view immediately. What you are requiring is similar to Shift parameters of the camera, not much sense to add something like that just for 3DView.
Author

Maybe I'm not explaining myself properly. Here is a small video demo.
https://www.dropbox.com/s/nfph5t2kgbgy7ml/zoom-to-mouse-position.mov?dl=0
As you can see when in camera view the zoom is on the center. If you want to see a larger section you need to zoom and pan. The camera itself is NOT moved in any way.

Maybe I'm not explaining myself properly. Here is a small video demo. https://www.dropbox.com/s/nfph5t2kgbgy7ml/zoom-to-mouse-position.mov?dl=0 As you can see when in camera view the zoom is on the center. If you want to see a larger section you need to zoom and pan. The camera itself is NOT moved in any way.

sigh but as soon as you pan you leave camera view…

*sigh* but as soon as you pan you leave camera view…
Member

Added subscribers: @mont29, @JulianEisel

Added subscribers: @mont29, @JulianEisel
Member

@mont29, Also don't see what you mean tbh, for me it seems like this could work and I don't see a conflict offhand. Why should panning the view leave camera view? (To be clear, under panning the view I understand changing the view's x/y-ofs) But in any case it's no bug indeed.

@mont29, Also don't see what you mean tbh, for me it seems like this could work and I don't see a conflict offhand. Why should panning the view leave camera view? (To be clear, under panning the view I understand changing the view's x/y-ofs) But in any case it's no bug indeed.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Eeeeeeek… now I feel stupid :|

Yeah, since we do have offset… "zoom to mouse" should work as well in this case I guess…

Eeeeeeek… now I feel stupid :| Yeah, since we do have offset… "zoom to mouse" should work as well in this case I guess…

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This isn't a bug, it was just never implemented. Setting TODO.

Edit, not to hard to support, will commit shortly.

This isn't a bug, it was just never implemented. Setting TODO. Edit, not to hard to support, will commit shortly.

This issue was referenced by 27e03dcd21

This issue was referenced by 27e03dcd21872d9daf73adf42c69c04c5806ac07

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 27e03dcd21.

Closed by commit 27e03dcd21.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44422
No description provided.