Fix T44422: Zoom to mouse fails in camera view

Camera now supports all zoom styles too.